[package]
name = "jetgpio"
version = "0.1.2"
authors = ["BradenEverson <bradeneverson@gmail.com>"]
description = "Peripheral Abstraction Layer for Jetson Nano Devices"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/BradenEverson/jetgpio"

[dependencies]
jetgpio-sys = { version = "0.2.2", default-features = false }
thiserror = "2.0.0"

[features]
default = []
orin = ["jetgpio-sys/orin"]

[lib]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
